scrollbars removed from game (preventing on/off flickering when changing rooms on certain browser sizes)

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background-color : #3f3f3f;
     color : #ffffff;
-    
+    overflow:hidden;
 }
 
 p {
